[workspace]
resolver = "2"
members = [
    "rsplayer_api_models",
    "rsplayer_backend",
    "rsplayer_metadata",
    "rsplayer_config",
    "rsplayer_playback",
    "rsplayer_hardware", "rsplayer_dsp",
    #    "rsplayer_web_ui"
]
exclude = ["rsplayer_web_ui"]

[workspace.dependencies]
log = { version = "0.4" }
env_logger = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fjall = "3"

# symphonia = { version = "0.5.5", features = ["all"] }
# symphonia-metadata = { version = "0.5.5" }
symphonia = { git = "https://github.com/ljufa/Symphonia.git", branch = "break_infinite_loop", features = ["all"] }
symphonia-metadata = { git = "https://github.com/ljufa/Symphonia.git", branch = "break_infinite_loop" }
# symphonia = { path = "../Symphonia/symphonia", features = ["all"] }
# symphonia-metadata = { path = "../Symphonia/symphonia-metadata" }

cpal = { git = "https://github.com/ljufa/cpal.git", branch = "master"}
# cpal = { path = "../cpal" }

cfg-if = "1"
tokio = { version = "1", features = ["full", "tracing"] }
futures = { version = "0.3", default-features = false }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
ureq = "3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
strip = true
