[workspace]
members = [
    "rsplayer_api_models",
    "rsplayer_backend",
    "rsplayer_config",
    "rsplayer_dsp",
    "rsplayer_hardware",
    "rsplayer_metadata",
    "rsplayer_playback"
    
]
exclude = ["rsplayer_web_ui"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
cfg-if = "1"
env_logger = "0.11"
fjall = "3"
serde_json = "1"
tokio-stream = "0.1"
ureq = "3"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.cpal]
git = "https://github.com/ljufa/cpal.git"
branch = "master"

[workspace.dependencies.futures]
version = "0.3"
default-features = false

[workspace.dependencies.log]
version = "0.4"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.symphonia]
git = "https://github.com/ljufa/Symphonia.git"
branch = "break_infinite_loop"
features = ["all"]

[workspace.dependencies.symphonia-metadata]
git = "https://github.com/ljufa/Symphonia.git"
branch = "break_infinite_loop"

[workspace.dependencies.tokio]
version = "1"
features = [
    "full",
    "tracing",
]

[workspace.dependencies.uuid]
version = "1"
features = [
    "serde",
    "v4",
]

[profile.release]
opt-level = 3
codegen-units = 1
debug = 0
debug-assertions = false
strip = true
