[workspace]
members = [
    "crates/api_models",
    "crates/server",
    "crates/config",
    "crates/dsp",
    "crates/hardware",
    "crates/metadata",
    "crates/playback",
    "crates/wire",
    "web-ui", "crates/desktop",
]
default-members = [
    "web-ui",
    "crates/api_models",
    "crates/server",
    "crates/config",
    "crates/dsp",
    "crates/hardware",
    "crates/metadata",
    "crates/playback",
    "crates/wire",
]
resolver = "2"

[workspace.package]
# Single source of truth for the release version.
# Read by: build scripts (CARGO_PKG_VERSION), cargo-deb, cargo-generate-rpm,
# cargo-packager and Makefile.toml (RELEASE_VERSION env derives from it).
version = "4.2.0"

[workspace.dependencies]
anyhow = "1"
cfg-if = "1"
env_logger = "0.11"
fjall = "3"
serde_json = "1"
tokio-stream = "0.1"
ureq = "3"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]


[workspace.dependencies.futures]
version = "0.3"
default-features = false

[workspace.dependencies.log]
version = "0.4"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.cpal]
git = "https://github.com/ljufa/cpal.git"
branch = "v_0.18.1_patched"

[workspace.dependencies.symphonia]
git = "https://github.com/ljufa/Symphonia.git"
branch = "break_infinite_loop"
features = ["all"]

[workspace.dependencies.symphonia-metadata]
git = "https://github.com/ljufa/Symphonia.git"
branch = "break_infinite_loop"

[workspace.dependencies.tokio]
version = "1"
features = [
    "full",
    "tracing",
]

[workspace.dependencies.uuid]
version = "1"
features = [
    "serde",
    "v4",
]


[profile.release]
opt-level = 3
codegen-units = 1
debug = 0
debug-assertions = false
strip = true
lto = true

[profile.release.package.rsplayer_web_ui]
opt-level = "s"
debug = false
