[package]
name = "api_models"
version = "0.2.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
uuid.workspace = true

validator = { version = "0.16.0", features = ["derive"] }
regex = "1.10.4"

strum = "0.26.3"
strum_macros = "0.26.4"
num-traits = { version = "0.2.19", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
