[package]
name = "api_models"
version = "0.2.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
uuid.workspace = true

validator = { version = "0.20", features = ["derive"] }
regex = "1"

strum = "0.28"
strum_macros = "0.28"
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.4", default-features = false }
