[package]
name = "rsplayer"
version = "0.2.0"
authors = ["Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/ljufa/rsplayer"
description = "RSPlayer - Music Player for Raspberry PI and software controller for AK4xxx DAC chips"

[package.metadata.deb]
name = "rsplayer"
maintainer = "Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
copyright = "2021, Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
suggests = "mpd (>= 0.22), lirc (>= 0.10.1-6.3)"
section = "Sound"
priority = "optional"


[package.metadata.deb.variants.x86_64-unknown-linux-gnu]
assets = [
    [
        "../target/x86_64-unknown-linux-gnu/release/rsplayer",
        "usr/local/bin/",
        "755",
    ],
    [
        "../PKGS/x86_64-unknown-linux-gnu/usr/local/bin/librespot",
        "usr/local/bin/",
        "755",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../target/ui/pkg/*",
        "opt/rsplayer/ui/pkg",
        "644",
    ],
    [
        "../rsplayer_web_ui/public/**/*",
        "opt/rsplayer/ui",
        "644",
    ],
]

[package.metadata.deb.variants.aarch64-unknown-linux-gnu]
assets = [
    [
        "../target/aarch64-unknown-linux-gnu/release/rsplayer",
        "usr/local/bin/",
        "755",
    ],
    [
        "../PKGS/aarch64-unknown-linux-gnu/usr/local/bin/librespot",
        "usr/local/bin/",
        "755",
    ],
    [
        "../PKGS/aarch64-unknown-linux-gnu/etc/lirc/lirc_options.conf",
        "etc/lirc/",
        "644",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../PKGS/debian/etc/lirc/lircd.conf.d/*",
        "etc/lirc/lircd.conf.d",
        "644",
    ],
    [
        "../target/ui/pkg/*",
        "opt/rsplayer/ui/pkg",
        "644",
    ],
    [
        "../rsplayer_web_ui/public/**/*",
        "opt/rsplayer/ui",
        "644",
    ],
]

[package.metadata.deb.variants.armv7-unknown-linux-gnueabihf]
assets = [
    [
        "../target/armv7-unknown-linux-gnueabihf/release/rsplayer",
        "usr/local/bin/",
        "755",
    ],
    [
        "../PKGS/armv7-unknown-linux-gnueabihf/usr/local/bin/librespot",
        "usr/local/bin/",
        "755",
    ],
    [
        "../PKGS/armv7-unknown-linux-gnueabihf/etc/lirc/lirc_options.conf",
        "etc/lirc/",
        "644",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../PKGS/debian/etc/lirc/lircd.conf.d/*",
        "etc/lirc/lircd.conf.d",
        "644",
    ],
    [
        "../target/ui/pkg/*",
        "opt/rsplayer/ui/pkg",
        "644",
    ],
    [
        "../rsplayer_web_ui/public/**/*",
        "opt/rsplayer/ui",
        "644",
    ],
]

[dependencies]
api_models = { path = "../rsplayer_api_models" }
rsplayer_metadata = { path = "../rsplayer_metadata" }
rsplayer_config = { path = "../rsplayer_config" }
rsplayer_playback = { path = "../rsplayer_playback" }
rsplayer_hardware = { path = "../rsplayer_hardware" }

#logging
log.workspace = true
env_logger.workspace = true
cfg-if.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true

#warp
warp = { version = "0.3.3", features = ["compression"] }
# async debug tokio-console
console-subscriber = "0.1.8"
tracing = "0.1"
tracing-subscriber = "0.3.15"
#other

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
strip = true
