[package]
name = "rsplayer"
version = "0.9.6"
authors = ["Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/ljufa/rsplayer"
description = "RSPlayer - Music Player"

[package.metadata.deb]
name = "rsplayer"
maintainer = "Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
copyright = "2021, Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
suggests = "mpd (>= 0.22), lirc (>= 0.10.1-6.3), nfs-common (>= 1:1.3.4-6)"
depends = "libasound2 (>= 1.2.4-1.1)"
section = "Sound"
priority = "optional"
maintainer-scripts = "../PKGS/maintainer-scripts"

[package.metadata.deb.variants.x86_64-unknown-linux-gnu]
name = "rsplayer_x86_64"
assets = [
    [
        "../target/x86_64-unknown-linux-gnu/release/rsplayer",
        "usr/bin/",
        "755",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../PKGS/debian/etc/polkit-1/rules.d/99-rsplayer.rules",
        "etc/polkit-1/rules.d/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/self.*",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/env",
        "opt/rsplayer/",
        "644",
    ],

]

[package.metadata.deb.variants.aarch64-unknown-linux-gnu]
name = "rsplayer_aarch64"
assets = [
    [
        "../target/aarch64-unknown-linux-gnu/release/rsplayer",
        "usr/bin/",
        "755",
    ],
    [
        "../PKGS/aarch64-unknown-linux-gnu/etc/lirc/lirc_options.conf",
        "etc/lirc/",
        "644",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../PKGS/debian/etc/polkit-1/rules.d/99-rsplayer.rules",
        "etc/polkit-1/rules.d/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/self.*",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/env",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/etc/lirc/lircd.conf.d/*",
        "etc/lirc/lircd.conf.d",
        "644",
    ],
]

[package.metadata.deb.variants.armv7-unknown-linux-gnueabihf]
name = "rsplayer_armv7l"
assets = [
    [
        "../target/armv7-unknown-linux-gnueabihf/release/rsplayer",
        "usr/bin/",
        "755",
    ],
    [
        "../PKGS/armv7-unknown-linux-gnueabihf/etc/lirc/lirc_options.conf",
        "etc/lirc/",
        "644",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../PKGS/debian/etc/polkit-1/rules.d/99-rsplayer.rules",
        "etc/polkit-1/rules.d/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/self.*",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/env",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/etc/lirc/lircd.conf.d/*",
        "etc/lirc/lircd.conf.d",
        "644",
    ],
]
[package.metadata.deb.variants.arm-unknown-linux-gnueabihf]
name = "rsplayer_armv6l"
assets = [
    [
        "../target/arm-unknown-linux-gnueabihf/release/rsplayer",
        "usr/bin/",
        "755",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../PKGS/debian/etc/polkit-1/rules.d/99-rsplayer.rules",
        "etc/polkit-1/rules.d/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/self.*",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/env",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/etc/lirc/lircd.conf.d/*",
        "etc/lirc/lircd.conf.d",
        "644",
    ],
]

[dependencies]
api_models = { path = "../rsplayer_api_models" }
rsplayer_metadata = { path = "../rsplayer_metadata" }
rsplayer_config = { path = "../rsplayer_config" }
rsplayer_playback = { path = "../rsplayer_playback" }
rsplayer_hardware = { path = "../rsplayer_hardware" }

#logging
log.workspace = true
env_logger.workspace = true
cfg-if.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
console-subscriber = "0.2.0"

#warp
warp = { version = "0.3.7", features = ["compression", "tls"] }
rust-embed = { version = "8.4.0", features = ["warp-ex", "compression"] }
warp-embed = "0.5.0"


