[package]
name = "rsplayer"
version = "1.7.0"
authors = ["Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"]
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/ljufa/rsplayer"
description = "RSPlayer - Music Player"

[package.metadata.deb]
name = "rsplayer"
maintainer = "Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
copyright = "2026, Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
suggests = "nfs-common (>= 1:1.3.4-6)"
depends = "libasound2 (>= 1.2.4-1.1)"
section = "Sound"
priority = "optional"
maintainer-scripts = "../PKGS/maintainer-scripts"

assets = [
    [
        "target/release/rsplayer",
        "usr/bin/",
        "755",
    ],
    [
        "../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../PKGS/debian/etc/polkit-1/rules.d/99-rsplayer.rules",
        "etc/polkit-1/rules.d/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/self.*",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../PKGS/debian/opt/rsplayer/env",
        "opt/rsplayer/",
        "644",
    ]
]

[features]
# default = ["lirc"]
lirc = ["rsplayer_hardware/lirc"]

[dependencies]
api_models = { path = "../rsplayer_api_models" }
rsplayer_metadata = { path = "../rsplayer_metadata" }
rsplayer_config = { path = "../rsplayer_config" }
rsplayer_playback = { path = "../rsplayer_playback" }
rsplayer_hardware = { path = "../rsplayer_hardware" }

#logging
log.workspace = true
env_logger.workspace = true
cfg-if.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
console-subscriber = "0.4.0"

#warp
warp = { version = "0.3.7", features = ["compression", "tls"] }
rust-embed = { version = "8.5.0", features = ["warp-ex", "compression"] }
warp-embed = "0.5.0"
serde = { workspace = true, features = ["derive"] }
