[package]
name = "rsplayer_hardware"
version = "0.1.0"
edition = "2021"


[dependencies]
api_models = { path = "../rsplayer_api_models" }
rsplayer_config = { path = "../rsplayer_config" }

#logging
log.workspace = true
env_logger.workspace = true
cfg-if.workspace = true
tokio.workspace = true
anyhow.workspace = true

#other
unidecode = "0.3.0"
alsa = "0.9.1"
url = "2.5.0"

# uart for serial communication with rsplayer_firmware
rpi_embedded = "0.1.0"
serialport = { version = "4.8.1", default-features = false }
