[package]
name = "rsplayer_metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
sled.workspace = true
symphonia.workspace = true

api_models = {path = "../rsplayer_api_models"}
walkdir = "2"
mockall = "0.11.4"
rand = "0.8.5"

[dev-dependencies]
random-string = "1.0.0"