[package]
name = "rsplayer_metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
fjall.workspace = true
symphonia.workspace = true
symphonia-metadata.workspace = true
ape-decoder = "0.3"
chrono.workspace = true
uuid.workspace = true
ureq.workspace = true

api_models = {path = "../rsplayer_api_models"}
walkdir = "2"
ebur128 = "0.1"
rayon = "1"
unicode-normalization = "0.1"
mockall = "0.14"
mockall_double = "0.3"

rand = "0.10"

[dev-dependencies]
random-string = "1"