[package]
name = "rsplayer_playback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
api_models = { path = "../rsplayer_api_models" }
rsplayer_metadata = { path = "../rsplayer_metadata" }
rsplayer_config = { path = "../rsplayer_config" }
# general
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
symphonia.workspace = true
tokio.workspace = true
thread-priority = "1.1.0"
core_affinity = "0.8.1"
sled.workspace = true

# symphonia
cpal = "0.15.3"
# cpal = { path = "/home/dlj/github/cpal" }
rb = "0.4.1"
# rubato = "0.12.0"
ureq = "2.10.1"


mockall_double = "0.3.1"

[dev-dependencies]
mockall = "0.13.0"
random-string = "1.1.0"
