[package]
name = "rsplayer_playback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
api_models = { path = "../rsplayer_api_models" }
rsplayer_metadata = { path = "../rsplayer_metadata" }
rsplayer_config = { path = "../rsplayer_config" }
rsplayer_dsp = { path = "../rsplayer_dsp" }
# general
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
symphonia.workspace = true
cpal.workspace = true
tokio.workspace = true
thread-priority = "1.1.0"
core_affinity = "0.8.1"
sled.workspace = true
ureq.workspace = true
serde_json.workspace = true
rb = "0.4.1"

mockall_double = "0.3.1"

[dev-dependencies]
mockall = "0.13.0"
random-string = "1.1.0"
