[package]
name = "rsplayer_web_ui"
version = "0.1.0"
authors = ["dragan <dragan.ljubojevic@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { version = "0.10.0", features = ["routing"] }
serde = "1.0.210"
serde_json = "1.0.128"
uuid = { version = "1.18.1", features = ["js"] }
indexmap = { version = "2.5.0", features = ["serde"] }
enclose = "1.2.0"
strum = "0.26.3"
strum_macros = "0.26.4"
api_models = { path = "../rsplayer_api_models" }
wasm-sockets = { version = "1" }
gloo-console = { version = "0.3.0" }
gloo-net = { version = "0.6.0" }
indextree = "4.7.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlElement", "CanvasRenderingContext2d", "CanvasGradient", "Window", "Document", "Element", "Node", "DomRect"] }
wasm-bindgen = "0.2"
gloo-file = { version = "0.3.0", features = ["futures"] }
serde_yaml = "0.9.34"



[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[features]
remote = []
local = []
default = ["remote"]

[profile.release]
lto = true
opt-level = "s"
