[package]
name = "rsplayer-desktop"
version = "0.1.0"
authors = ["Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"]
edition = "2021"
description = "RSPlayer Desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dirs = "6"
rsplayer = { path = "../server" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
