[package]
name = "hardware"
version = "0.1.0"
edition = "2021"


[features]
alsa = ["dep:alsa"]
lirc = []

[dependencies]
api_models = { path = "../api_models" }
config = { path = "../config" }
wire = { path = "../wire" }
postcard = { version = "1", default-features = false, features = ["use-std"] }

#logging
log.workspace = true
env_logger.workspace = true
cfg-if.workspace = true
tokio.workspace = true
anyhow.workspace = true

#other
unidecode = "0.3.0"
alsa = { version = "0.11.0", optional = true }
url = "2.5.0"


# usb for serial communication with rsplayer_firmware
serialport = { version = "4.8.1", default-features = false }
