[package]
name = "rsplayer"
version.workspace = true
authors = ["Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"]
edition = "2021"
license-file = "../../LICENSE"
repository = "https://github.com/ljufa/rsplayer"
description = "RSPlayer - Music Player"

[package.metadata.deb]
name = "rsplayer"
maintainer = "Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
copyright = "2026, Dragan Ljubojevic <dragan.ljubojevic@gmail.com>"
suggests = "nfs-common (>= 1:1.3.4-6), cifs-utils (>= 2:6.9-1)"
depends = "libasound2 (>= 1.2.4-1.1)"
section = "Sound"
priority = "optional"
# keep deb version identical to the crate version (no "-1" revision suffix),
# matching the naming used by install.sh and previous releases
revision = ""
maintainer-scripts = "../../PKGS/maintainer-scripts"

assets = [
    [
        "target/release/rsplayer",
        "usr/bin/",
        "755",
    ],
    [
        "../../PKGS/debian/etc/systemd/system/rsplayer.service",
        "etc/systemd/system/rsplayer.service",
        "644",
    ],
    [
        "../../PKGS/debian/etc/polkit-1/rules.d/99-rsplayer.rules",
        "etc/polkit-1/rules.d/",
        "644",
    ],
    [
        "../../PKGS/debian/opt/rsplayer/self.*",
        "opt/rsplayer/",
        "644",
    ],
    [
        "../../PKGS/debian/opt/rsplayer/env",
        "opt/rsplayer/",
        "644",
    ]
]

# RPM packaging via cargo-generate-rpm (replaces the old hand-rolled rpmbuild spec).
# Run from the workspace root, e.g.:
#   cargo generate-rpm -p crates/server --target <triple> --arch <rpm_arch> -o <out>.rpm
[package.metadata.generate-rpm]
name = "rsplayer"
summary = "RSPlayer - Music Player"
license = "MIT"
release = "1"
auto-req = "no"

assets = [
    { source = "target/release/rsplayer", dest = "/usr/bin/rsplayer", mode = "755" },
    { source = "PKGS/debian/etc/systemd/system/rsplayer.service", dest = "/etc/systemd/system/rsplayer.service", mode = "644", config = "noreplace" },
    { source = "PKGS/debian/etc/polkit-1/rules.d/99-rsplayer.rules", dest = "/etc/polkit-1/rules.d/99-rsplayer.rules", mode = "644", config = "noreplace" },
    { source = "PKGS/debian/opt/rsplayer/env", dest = "/opt/rsplayer/env", mode = "644", config = "noreplace" },
    { source = "PKGS/debian/opt/rsplayer/self.crt", dest = "/opt/rsplayer/self.crt", mode = "644", config = "noreplace" },
    { source = "PKGS/debian/opt/rsplayer/self.key", dest = "/opt/rsplayer/self.key", mode = "644", config = "noreplace" },
]

pre_install_script = """
getent group audio >/dev/null || groupadd -r audio
getent group dialout >/dev/null || groupadd -r dialout
getent group i2c >/dev/null || groupadd -r i2c
getent group gpio >/dev/null || groupadd -r gpio
getent group spi >/dev/null || groupadd -r spi
getent group input >/dev/null || groupadd -r input
if [ "$1" -eq 1 ]; then
    # initial installation
    # Create rsplayer group if it doesn't exist
    getent group rsplayer >/dev/null || groupadd -r rsplayer
    # Create rsplayer user
    useradd -r -s /bin/false -d /opt/rsplayer -g rsplayer rsplayer || :
    # Add to supplementary groups
    usermod -a -G audio,dialout,i2c,gpio,spi,input rsplayer || true
fi
"""

post_install_script = """
# Set ownership of /opt/rsplayer
chown -R rsplayer /opt/rsplayer 2>/dev/null || :
mkdir -p /mnt/rsplayer
chown rsplayer /mnt/rsplayer 2>/dev/null || :
if [ "$1" -eq 1 ]; then
    # initial installation
    systemctl daemon-reload >/dev/null 2>&1 || :
    systemctl enable rsplayer >/dev/null 2>&1 || :
    systemctl start rsplayer >/dev/null 2>&1 || :
elif [ "$1" -ge 2 ]; then
    # upgrade
    systemctl daemon-reload >/dev/null 2>&1 || :
    systemctl try-restart rsplayer >/dev/null 2>&1 || :
fi
"""

pre_uninstall_script = """
if [ "$1" -eq 0 ]; then
    # uninstallation
    systemctl stop rsplayer >/dev/null 2>&1 || :
    systemctl disable rsplayer >/dev/null 2>&1 || :
fi
"""

post_uninstall_script = """
if [ "$1" -ge 1 ]; then
    # upgrade
    systemctl daemon-reload >/dev/null 2>&1 || :
    systemctl try-restart rsplayer >/dev/null 2>&1 || :
fi
"""

[package.metadata.generate-rpm.requires]
alsa-lib = ">= 1.2.4"
shadow-utils = "*"

[package.metadata.generate-rpm.suggests]
nfs-utils = "*"

[features]
default = ["alsa"]
alsa = ["hardware/alsa"]
lirc = ["hardware/lirc"]

[dependencies]
api_models = { path = "../api_models" }
metadata = { path = "../metadata" }
config = { path = "../config" }
playback = { path = "../playback" }
hardware = { path = "../hardware" }
cpal.workspace = true

#logging
log.workspace = true
env_logger.workspace = true
cfg-if.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
console-subscriber = { version = "0.5", optional = true }

#http
axum = { version = "0.8", features = ["ws", "macros"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "fs", "set-header"] }
rust-embed = { version = "8", features = ["mime-guess", "compression", "include-exclude"] }
mime_guess = "2"
serde = { workspace = true, features = ["derive"] }
percent-encoding = "2"
fjall.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["mount", "user"] }

[dev-dependencies]
tempfile = "3"
